force-app/main/default/objects/CuratedPicklistSetup__mdt/CuratedPicklistSetup__mdt.object-meta.xml
<CustomObject>
    <label>Curated picklist Setup</label>
    <pluralLabel>Curated picklist Setups</pluralLabel>
</CustomObject>