force-app/main/default/objects/CuratedPicklistSetup__mdt/fields/CategoryDescription__c.field-meta.xml
<CustomField>
    <fullName>CategoryDescription__c</fullName>
    <label>Category Description</label>
    <length>155</length>
    <type>Text</type>
</CustomField>