force-app/main/default/objects/CuratedPicklistSetup__mdt/fields/DetailDescription__c.field-meta.xml
<CustomField>
    <fullName>DetailDescription__c</fullName>
    <label>Detail Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>