force-app/main/default/objects/CuratedPicklistSetup__mdt/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>155</length>
    <type>Text</type>
</CustomField>