force-app/main/default/objects/CuratedPicklistSetup__mdt/fields/SubcategoryDescription__c.field-meta.xml
<CustomField>
    <fullName>SubcategoryDescription__c</fullName>
    <description>Subcategory Description</description>
    <label>Subcategory Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>