force-app/main/default/objects/CuratedPicklistSetup__mdt/fields/UserTitle__c.field-meta.xml
<CustomField>
    <fullName>UserTitle__c</fullName>
    <label>User Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>